# zta-hub

./: .dockerignore  .gitignore  CLAUDE_GEMINI_AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  governing-actions-not-agents-v6.md  start-local.sh
.github/workflows/: ci.yml  release.yml
broker/: Cargo.toml
broker/src/: credential_broker.rs  lib.rs
engine/: Cargo.toml
engine/src/: computation_registry.rs  computation_verifier.rs  lib.rs  policy_evaluator.rs  wasm_runtime.rs
examples/medical/: skills.json  test_flow.sh  trusted_sources.json
examples/medical/oracle/: keygen.py  oracle.py
examples/medical/policies/: prescribe_medication.cedar  release_medical_records.cedar
hub_server/: Cargo.toml
hub_server/src/: main.rs
schemas/: Cargo.toml  build.rs
schemas/proto/: action_request.proto  audit_receipt.proto  capability_token.proto  computation_record.proto  skill_contract.proto
schemas/src/: base64_serde.rs  lib.rs
state/: Cargo.toml
state/src/: audit_log.rs  checkpointing.rs  lib.rs
