[package]
name = "hub_server"
version = "0.1.0"
edition = "2021"

[dependencies]
schemas = { path = "../schemas" }
engine = { path = "../engine" }
broker = { path = "../broker" }

ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json"] }
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"

